# ai-adapter

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  cli.py  docker-compose.yml  docker-entrypoint.sh  download_models.py  download_models.py.patch  pyproject.toml  requirements.txt  start.py
adapter/: config.py  loader.py  main.py  response_schemas.py
adapter/database/: README.md  face_db.py
adapter/interfaces/: __init__.py  task.py
adapter/models/: README.md  __init__.py  base_handler.py  blip_handler.py  huggingface_handler.py  insightface_handler.py  yolov11_handler.py  yolov8_handler.py
adapter/tasks/: README.md  __init__.py
adapter/tasks/face_detection/: schema.json  task.py
adapter/tasks/face_recognition/: schema.json  task.py
adapter/tasks/person_counting/: schema.json  task.py
adapter/tasks/person_detection/: schema.json  task.py
adapter/tasks/scene_description/: schema.json  task.py
adapter/utils/: README.md  __init__.py  image_utils.py  visualization.py
adapters/piper/: Dockerfile  README.md  __init__.py  auth.py  main.py  metrics.py  service.py
adapters/whisper/: Dockerfile  README.md  __init__.py  auth.py  main.py  metrics.py  service.py
adapters/yolov8/: Dockerfile  README.md  __init__.py  auth.py  coco_classes.py  main.py  metrics.py  service.py
app/: main.py
app/adapters/: base.py  example_adapter.py
app/adapters/audio/: __init__.py  piper_adapter.py  whisper_adapter.py
app/adapters/llm/: __init__.py  blip_adapter.py  huggingface_adapter.py  llm_adapter.py  ollama_adapter.py
app/adapters/vision/: __init__.py  blip_adapter.py  huggingface_adapter.py  insightface_adapter.py  yolo_adapter.py  yolov11_adapter.py  yolov8_adapter.py
app/api/: auth.py  endpoints.py  endpoints.py.patch
app/config/: __init__.py  config.py
app/interfaces/: __init__.py  adapter.py  contract.py  task.py
app/pipelines/: engine.py
app/pipelines/audio_transcription/: __init__.py  task.py
app/pipelines/chat_completion/: __init__.py  task.py
app/pipelines/face_detection/: __init__.py  task.py
app/pipelines/face_recognition/: __init__.py  task.py
app/pipelines/person_counting/: __init__.py  task.py
app/pipelines/person_detection/: __init__.py  task.py
app/pipelines/scene_description/: __init__.py  task.py
app/pipelines/speech_synthesis/: __init__.py  task.py
app/router/: model_router.py
app/schemas/: __init__.py  responses.py
app/utils/: audio_utils.py  hardware.py  image_utils.py  loader.py
conformance/: README.md  __init__.py  __main__.py  runner.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  MODELS.md  PLUGIN_DEVELOPMENT.md  RUNNER_GUIDE.md
opennvr/: runner.py  runnerrec.py
opennvr_adapter_sdk/: CHANGELOG.md  LICENSE  README.md  __init__.py  adapter_app.py  auth.py  contract.py  metrics.py  pyproject.toml  service.py
tests/: _piper_service_fixtures.py  _whisper_service_fixtures.py  _yolov8_service_fixtures.py  conftest.py  test_conformance_against_piper.py  test_conformance_against_whisper.py  test_conformance_against_yolov8.py  test_endpoints.py  test_ollama_adapter.py  test_pipelines.py  test_piper_adapter.py  test_piper_service.py  test_router.py  test_whisper_adapter.py  test_whisper_service.py  test_yolov8_service.py
